tests/ui/const-generics/type-dependent/type-mismatch.min.stderr
error[E0308]: mismatched types
  --> $DIR/type-mismatch.rs:8:27
   |
LL |     assert_eq!(R.method::<1u16>(), 1);
   |                           ^^^^ expected `u8`, found `u16`
   |
help: change the type of the numeric literal from `u16` to `u8`
   |
LL |     assert_eq!(R.method::<1u8>(), 1);
   |                            ~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
